--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wokilite-reservations",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
@@ -29,6 +29,7 @@
     "vitest": "^4.0.16"
   },
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "express": "^5.2.1",
