--- a/package.json
+++ b/package.json
@@ -20,21 +20,23 @@
   "author": "",
   "license": "ISC",
   "description": "WokiLite - Restaurant Reservation System",
-  "devDependencies": {
-    "@types/express": "^5.0.6",
-    "@types/node": "^25.0.3",
-    "@vitest/ui": "^4.0.16",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3",
-    "vitest": "^4.0.16"
-  },
   "dependencies": {
     "async-mutex": "^0.5.0",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "express": "^5.2.1",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
     "zod": "^4.2.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.0.3",
+    "@vitest/ui": "^4.0.16",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.16"
   }
 }
